--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Paul\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\RYZEN\\AppData\\Roaming\\NetBeans\\13\\build.properties
