--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.AbsoluteLayout-RELEASE140.jar=C:\\Users\\Paul\\Downloads\\jar_files\\AbsoluteLayout-RELEASE140.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\RYZEN\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Paul\\AppData\\Roaming\\NetBeans\\13\\build.properties
