Se crea la ventana de confirmar Compra

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE140.jar=C:\\Users\\RYZEN\\Downloads\\Instaladores\\AbsoluteLayout-RELEASE140.jar
 file.reference.AbsoluteLayout-RELEASE140.jar-1=C:\\Users\\Paul\\Downloads\\jar_files\\AbsoluteLayout-RELEASE140.jar
+file.reference.AbsoluteLayout-RELEASE140.jar-2=C:\\Users\\RYZEN\\Downloads\\Instaladores\\AbsoluteLayout-RELEASE140.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AbsoluteLayout-RELEASE140.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE140.jar-1}
+    ${file.reference.AbsoluteLayout-RELEASE140.jar-1}:\
+    ${file.reference.AbsoluteLayout-RELEASE140.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
