--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=UniMarket
-application.vendor=RYZEN
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,18 +32,10 @@ dist.jar=${dist.dir}/UniMarket.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/UniMarket
-endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE140.jar=C:\\Users\\RYZEN\\Downloads\\Instaladores\\AbsoluteLayout-RELEASE140.jar
-file.reference.AbsoluteLayout-RELEASE140.jar-1=C:\\Users\\Paul\\Downloads\\jar_files\\AbsoluteLayout-RELEASE140.jar
-file.reference.AbsoluteLayout-RELEASE140.jar-2=C:\\Users\\RYZEN\\Downloads\\Instaladores\\AbsoluteLayout-RELEASE140.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.AbsoluteLayout-RELEASE140.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE140.jar-1}:\
-    ${file.reference.AbsoluteLayout-RELEASE140.jar-2}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=UniMarket
-main.class=UniMarket.UniMarket
+main.class=unimarket.UniMarket
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
